<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/large"
    android:paddingEnd="@dimen/large"
    tools:context=".ui.main.ListUsersFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textFilter"
        tools:text="Fernando Henrique Brasil"
        app:layout_constraintBottom_toBottomOf="@id/btSearch"
        app:layout_constraintEnd_toStartOf="@id/btSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btSearch" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btSearch"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="20"
        tools:listitem="@layout/item_user" />
</androidx.constraintlayout.widget.ConstraintLayout>