<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/large">

    <View
        android:id="@+id/vDivisor"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_divisor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserId"
        style="@style/item_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vDivisor"
        tools:text="1250000" />

    <TextView
        android:id="@+id/tvUserName"
        style="@style/item_list_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/medium"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUserId"
        app:layout_constraintTop_toTopOf="@+id/tvUserId"
        tools:text="Fernando Henrique Brasil" />
</androidx.constraintlayout.widget.ConstraintLayout>